After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727948 - gnome-shell-extension-prefs do not show preferences
gnome-shell-extension-prefs do not show preferences
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: extensions
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2014-04-10 09:47 UTC by Jura
Modified: 2014-04-15 21:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
extension-prefs: Force linking with libgnome-shell-js (1.15 KB, patch)
2014-04-10 15:36 UTC, Florian Müllner
committed Details | Review

Description Jura 2014-04-10 09:47:14 UTC
ura@workhost ~ $ export LANG=c              
jura@workhost ~ $ gnome-shell-extension-prefs

(gnome-shell-extension-prefs:31047): Gtk-WARNING **: Locale not supported by C library.
	Using the fallback 'C' locale.

** (gnome-shell-extension-prefs:31047): WARNING **: Failed to load shared library 'libgnome-shell-js.so' referenced by the typelib: libgnome-shell-js.so: cannot open shared object file: No such file or directory

(gnome-shell-extension-prefs:31047): Gjs-WARNING **: JS ERROR: TypeError: exc.stack is undefined
Application<._buildErrorUI@resource:///org/gnome/shell/extensionPrefs/main.js:137
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Application<._selectExtension@resource:///org/gnome/shell/extensionPrefs/main.js:104
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Application<._extensionSelected@resource:///org/gnome/shell/extensionPrefs/main.js:121
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
main@resource:///org/gnome/shell/extensionPrefs/main.js:278
@<main>:1


(gnome-shell-extension-prefs:31047): Gjs-WARNING **: JS ERROR: TypeError: exc.stack is undefined
Application<._buildErrorUI@resource:///org/gnome/shell/extensionPrefs/main.js:137
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Application<._selectExtension@resource:///org/gnome/shell/extensionPrefs/main.js:104
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Application<._extensionSelected@resource:///org/gnome/shell/extensionPrefs/main.js:121
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
main@resource:///org/gnome/shell/extensionPrefs/main.js:278
@<main>:1


(gnome-shell-extension-prefs:31047): Gjs-WARNING **: JS ERROR: TypeError: exc.stack is undefined
Application<._buildErrorUI@resource:///org/gnome/shell/extensionPrefs/main.js:137
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Application<._selectExtension@resource:///org/gnome/shell/extensionPrefs/main.js:104
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
Application<._extensionSelected@resource:///org/gnome/shell/extensionPrefs/main.js:121
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
main@resource:///org/gnome/shell/extensionPrefs/main.js:278
@<main>:1

jura@workhost ~ $ ls /usr/lib64/gnome-shell/libgnome-shell-js.so 
/usr/lib64/gnome-shell/libgnome-shell-js.so
Comment 1 Florian Müllner 2014-04-10 11:22:12 UTC
I'm unable to reproduce this on either Fedora rawhide (3.12.0) or master - what distribution are you using?
Comment 2 Jura 2014-04-10 11:33:50 UTC
I'm use gentoo.
Do you have a link in /usr/lib/ to the librery /usr/lib64/gnome-shell/libgnome-shell-js.so ?

After export LD_LIBRARY_PATH=/usr/lib64/gnome-shell/ this error can not reproduce for me.
Comment 3 Florian Müllner 2014-04-10 12:54:34 UTC
(In reply to comment #2)
> I'm use gentoo.

Why am I not surprised? ;-)


> Do you have a link in /usr/lib/ to the librery
> /usr/lib64/gnome-shell/libgnome-shell-js.so ?

No. The binary is expected to be linked against libgnome-shell-js[0] - do you happen to have --as-needed in your linker flags?

[0] https://git.gnome.org/browse/gnome-shell/tree/src/Makefile.am#n200
Comment 4 Jura 2014-04-10 15:04:01 UTC
Thanks! ;)

I recompie gnome-shell with --no-as-needed and bug disappear.
Comment 5 Florian Müllner 2014-04-10 15:36:32 UTC
Created attachment 274001 [details] [review]
extension-prefs: Force linking with libgnome-shell-js

Use the same hack we use for the main executable to fool the linker
when using --as-needed.
Comment 6 Florian Müllner 2014-04-10 15:37:07 UTC
Could you please confirm that the attached patch fixes the issue even when linking with --as-needed?
Comment 7 Jura 2014-04-10 20:41:37 UTC
Yes, this patch work ;)
Comment 8 Florian Müllner 2014-04-15 21:35:53 UTC
Attachment 274001 [details] pushed as b4a48a7 - extension-prefs: Force linking with libgnome-shell-js